option optimize_for = LITE_RUNTIME;
package inventory;
import public "common.proto";

// USER MESSAGE STRUCTURE
message MsgInventoryRequest {
  oneof data{
    Add add = 2;
    Remove remove = 5;
    Modify modify = 6;
    Get get = 7;
    AddShelf addShelf = 15;
//    RmShelf rmShelf = 16;
//    MoveShelf mvShelf = 17;
  }

// ACTION MESSAGES /////////////////////
  message Add{
    optional Acl acl = 1;
    required string name = 2;
    optional string description = 3;
  }

  message Remove{
    required int32 uid = 1;
    optional bool removeItems = 2;
  }

  message Modify{
    required int32 uid = 1;
    optional string newName = 2;
    optional string newDesc = 3;
    optional Acl newAcl = 4;
  }

  message Get {
    optional bool id = 1;
    optional bool name = 2;
    optional bool description = 3;
    optional bool acl = 4;
//    optional bool files = 5;
  }

  message  AddShelf {
    required int32 inventoryId = 1;
    required InventoryShelf shelf = 2;
  }
}

message MsgInventoryResponse {
  required ResponseCode code = 1;
}

message PositionOfItemOnShelf {

}

message InventoryShelf {
    optional int32 id=1;
    optional string name = 2;
    optional int32 storageId = 3;
    optional string positionOfShelf = 4;
    optional string description = 5;

    optional Acl acl = 10;
}
